--- a/src/main/resources/templates/WebKhachHang/chi-tiet-don-mua.html
+++ b/src/main/resources/templates/WebKhachHang/chi-tiet-don-mua.html
@@ -816,12 +816,12 @@
       </div>
 
       <div class="payment-info">
-    <span class="payment-label">
-        <i class="fas fa-info-circle mr-2"></i>Trạng thái thanh toán
-    </span>
+  <span class="payment-label">
+    <i class="fas fa-info-circle mr-2"></i>Trạng thái thanh toán
+  </span>
         <span class="payment-value"
-              th:classappend="${currentStatus == 'Vận chuyển thành công' or currentStatus == 'Hoàn thành' or hoaDon.donHang.trangThaiThanhToan} ? 'text-green-600' : 'text-orange-600'"
-              th:text="${currentStatus == 'Vận chuyển thành công' or currentStatus == 'Hoàn thành' or hoaDon.donHang.trangThaiThanhToan} ? 'Đã thanh toán' : 'Chưa thanh toán'"></span>
+              th:classappend="${(hoaDon.donHang.phuongThucThanhToan != null and (hoaDon.donHang.phuongThucThanhToan.tenPhuongThuc.trim().toLowerCase() == 'ví thanh toán' or hoaDon.donHang.phuongThucThanhToan.tenPhuongThuc.trim().toLowerCase() == 'chuyển khoản')) or (hoaDon.donHang.phuongThucThanhToan != null and (hoaDon.donHang.phuongThucThanhToan.tenPhuongThuc.trim().toLowerCase() != 'ví thanh toán' and hoaDon.donHang.phuongThucThanhToan.tenPhuongThuc.trim().toLowerCase() != 'chuyển khoản') and (currentStatus == 'Vận chuyển thành công' or currentStatus == 'Hoàn thành')) ? 'text-green-600' : 'text-orange-600'}"
+              th:text="${(hoaDon.donHang.phuongThucThanhToan != null and (hoaDon.donHang.phuongThucThanhToan.tenPhuongThuc.trim().toLowerCase() == 'ví thanh toán' or hoaDon.donHang.phuongThucThanhToan.tenPhuongThuc.trim().toLowerCase() == 'chuyển khoản')) or (hoaDon.donHang.phuongThucThanhToan != null and (hoaDon.donHang.phuongThucThanhToan.tenPhuongThuc.trim().toLowerCase() != 'ví thanh toán' and hoaDon.donHang.phuongThucThanhToan.tenPhuongThuc.trim().toLowerCase() != 'chuyển khoản') and (currentStatus == 'Vận chuyển thành công' or currentStatus == 'Hoàn thành')) ? 'Đã thanh toán' : 'Chưa thanh toán'}"></span>
       </div>
 
       <div class="payment-info">
