--- a/src/main/resources/templates/WebKhachHang/don-mua.html
+++ b/src/main/resources/templates/WebKhachHang/don-mua.html
@@ -520,6 +520,11 @@
             </a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" th:classappend="${status == 'hoan-tra'} ? ' active'" th:href="@{/dsdon-mua(status='hoan-tra')}">
+                <i class="fas fa-check-double mr-2"></i>Hoàn trả
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" th:classappend="${status == 'da-huy'} ? ' active'" th:href="@{/dsdon-mua(status='da-huy')}">
                 <i class="fas fa-times-circle mr-2"></i>Đã hủy
             </a>
